gcc/testsuite/gdc.test/compilable/imports/test66a.d
module imports.test66a;

import test66;

class A : Lexer
{
}
