gcc/testsuite/gdc.test/fail_compilation/imports/issue21295dtemplate.d
module imports.issue21295dtemplate;
import imports.issue21295ast_node;
class TemplateParameter : ASTNode { }
